--- a/ESP/ESP/CPUZ.csproj
+++ b/ESP/ESP/CPUZ.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9BC48D38-89A1-47C2-9C68-DC2B9881D033}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ESP</RootNamespace>
-    <AssemblyName>ESP</AssemblyName>
+    <RootNamespace>CPUZ</RootNamespace>
+    <AssemblyName>CPUZ</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -64,11 +64,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CPUZ.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CPUZ.Designer.cs">
+      <DependentUpon>CPUZ.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\APlayerCameraManager.cs" />
     <Compile Include="Model\JSON_DATA.cs" />
@@ -76,8 +76,8 @@
     <Compile Include="Model\UEClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="CPUZ.resx">
+      <DependentUpon>CPUZ.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -87,6 +87,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
