--- a/ESP/ESP/packages.config
+++ b/ESP/ESP/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net462" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="SharpDX" version="4.0.1" targetFramework="net462" />
   <package id="SharpDX.Direct2D1" version="4.0.1" targetFramework="net462" />
