添加更多快捷键

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ node_server/package-lock.json
 UPSecurityInput/
 ESP/ESP/KReader.cs
 kernel driver/
+ESP/ESP/KReader.cs
+ESP/ESP/KReader.cs
+ESP/ESP/KReader.cs
